# YaWC

./: .gitignore  Cargo.toml  README.md  README.org  README.rst  flake.nix  yawc.desktop
config/: Cargo.toml
config/src/: binds.rs  envs.rs  lib.rs  xkb.rs
nix/: default.nix  formatter.nix  nixos.nix
resources/: init.kdl
src/: Cargo.toml  cursor.rs  focus.rs  input_handler.rs  lib.rs  main.rs  state.rs  udev.rs  winit.rs  x11.rs
src/config/: binds.rs  envs.rs  init.kdl  mod.rs
src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
src/udev_mod/: mod.rs
yawc/: Cargo.toml
yawc/src/: cursor.rs  drawing.rs  focus.rs  fps_counter.rs  input_handler.rs  lib.rs  logging.rs  main.rs  render.rs  state.rs  udev.rs
yawc/src/backend/: mod.rs  udev.rs  winit.rs  x11.rs
yawc/src/handlers/: image_capture_source.rs  image_copy_capture.rs  input.rs  mod.rs  seat.rs
yawc/src/protocols/screencopy/: mod.rs
yawc/src/render/: mod.rs
yawc/src/shell/: element.rs  mod.rs  ssd.rs
yawc_config/src/: binds.rs  envs.rs
