[workspace]
resolver = "3" # Rust 2024
members = ["config", "yawc"]
default-members = ["yawc"]

[workspace.dependencies]
gl_generator = "0.14.0"
puffin_http = "0.16.1"
renderdoc = "0.12.1"
fps_ticker = "1.0.0"
thiserror = "2.0.18"
xkbcommon = "0.9.0"
getrandom = "0.4.2"
bitflags = "2.11.0"
xcursor = "0.3.10"
profiling = "1.0"
knuffel = "3.2.0"

[workspace.dependencies.yawc-config]
path = "./config"

[workspace.dependencies.image]
version = "0.25.9"
default-features = false
features = ["png"]

[workspace.dependencies.tracing]
version = "0.1.44"
features = ["max_level_trace", "release_max_level_debug"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"

[workspace.dependencies.smithay]
default-features = false
git = "https://github.com/Smithay/smithay.git"
features = ["desktop", "wayland_frontend"]

[workspace.dependencies.x11rb]
default-features = false
features = ["composite"]
version = "0.13.2"
