[workspace]
resolver = "3" # Rust 2024
members = ["config", "yawc"]
default-members = ["yawc"]

[workspace.dependencies]
gl_generator = "0.14.0"
renderdoc = "0.12.1"
thiserror = "2.0.18"
xkbcommon = "0.9.0"
bitflags = "2.11.0"
xcursor = "0.3.10"
profiling = "1.0.17"
knus = "3.2.0"
png = "0.18.1"
libc = "0.2"

[workspace.dependencies.yawc-config]
path = "./config"

[workspace.dependencies.tracing]
version = "0.1.44"
features = ["max_level_trace", "release_max_level_debug"]

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"

[workspace.dependencies.smithay]
default-features = false
git = "https://github.com/Smithay/smithay.git"
features = ["desktop", "wayland_frontend"]
