[build-dependencies]
gl_generator.workspace = true

[dependencies]
yawc-config.workspace = true
thiserror.workspace = true
xkbcommon.workspace = true
profiling.workspace = true
renderdoc.workspace = true
bitflags.workspace = true
tracing.workspace = true
smithay.workspace = true
png.workspace = true

[dependencies.xcursor]
workspace = true
optional = true

[dependencies.smithay-drm-extras]
workspace = true
optional = true

[package]
name = "yawc"
version = "0.0.1"
description = "Batteries-included Wayland compositor"
license = "AGPL-3.0"
readme = "../README.org"
edition = "2024"

[features]
default = ["egl", "winit", "x11", "udev", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor"
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = ["smithay/backend_x11", "smithay/renderer_gl", "smithay/backend_vulkan"]
xwayland = ["smithay/xwayland", "smithay/x11rb_event_source", "xcursor"]
profile-with-tracy = ["profiling/profile-with-tracy"]
renderer_sync = []
